[BUILD] Optimise testing configuration and API adjustments
- Enhanced testing capabilities in `build.gradle.kts`
- Made `java.base/java.lang` and `java.desktop/javax.swing` modules accessible for all unnamed modules in testing tasks
- Improved configuration for future development efficiency